# lbsRecommend

./: .gitignore  CMakeLists.txt  Makefile  README.md  demo.sh
demo/client/: main.cpp
demo/pprs/: CMakeLists.txt  main.cpp
demo/psp/: main.cpp  server.hpp
demo/share/: define.hpp
lbsr/lbsr_client/: lbsr_client_pprs_client.cpp  lbsr_client_psp_client.cpp  lbsr_client_psp_client.hpp
lbsr/lbsr_pprs/: lbsr_enc_database.hpp  lbsr_pprs_callback_function.cpp  lbsr_pprs_callback_function.hpp  lbsr_pprs_enc_database.cpp  lbsr_pprs_enc_database.hpp  lbsr_pprs_psp_client.cpp  lbsr_pprs_psp_client.hpp  lbsr_pprs_state.cpp  lbsr_pprs_state.hpp  lbsr_pprs_thread.cpp
lbsr/lbsr_psp/: lbsr_psp_callback_function.cpp  lbsr_psp_callback_function.hpp  lbsr_psp_callback_param.hpp  lbsr_psp_state.cpp  lbsr_psp_state.hpp  lbsr_psp_thread.cpp  lbsr_psp_thread.hpp
lbsr/lbsr_share/: CMakeLists.txt  lbsr_define.hpp  lbsr_enc_cooccurrence.cpp  lbsr_enc_cooccurrence.hpp  lbsr_enc_preference.cpp  lbsr_enc_preference.hpp  lbsr_enc_recommendation.cpp  lbsr_enc_recommendation.hpp  lbsr_packet.hpp  lbsr_securekey_filemanager.cpp  lbsr_utility.cpp
lbsrecommend-release-1.00b/: CMakeLists.txt  README.md
lbsrecommend-release-1.00b/demo/: CMakeLists.txt
lbsrecommend-release-1.00b/demo/client/: CMakeLists.txt  main.cpp  (+1 more)
lbsrecommend-release-1.00b/doc/: Doxyfile
lbsrecommend-release-1.00b/lbsr/: CMakeLists.txt
src/Client/: dbupdate.cpp  userside.cpp
src/Initialization/: coocurrence.cpp
src/Server(PPRS)/: Socket_client.cpp  recommend.cpp
src/Server(PSP)/: Socket_server.cpp  decrypt.cpp
(+29 files in other folders)
